# redcap-mcs

./: .dockerignore  .gitignore  .output.txt  Dockerfile  ECLSDatenbanktest_DataDictionary.csv  README.md  REDCap_db.xml  all_patient_data_debug.csv  analysis_result.txt  analyze_output.py  app.py  blacklist.txt  cli.py  debug_all_patient_data_headers.txt  documentation.ipynb  fluidtest.json  full_export.csv  main.py  nirs_debug.csv  output.csv  pyproject.toml  pyproject.toml.bak  requirements.txt  state.py  test_new_features.py  test_output.csv  testbook.ipynb  testlab.json
.github/workflows/: build-windows.yml  build_windows.yml
_old_backup/: data_parser.py  ecmo_data.py  homepage.py  lab_form.py  medication.py  respiratory.py  respiratory_data.py  sidebar.py  utils.py  vitals.py
_old_backup/state_provider/: data_manager.py  query_manager.py  state_provider.py
_old_backup/value_aggregation/: __init__.py
deidentifier_engine/: __init__.py  anonymizer.py  nlp_engine.py
mlife_core/services/: pipeline.py
schemas/app_state_schemas/: app_state.py
schemas/db_schemas/: lab.py  (+7 more)
services/: data_parser.py  delimiter_auto_detecion.py  lab_aggregator.py  pipeline.py
state_provider/: data_manager.py  query_manager.py  state_provider.py  state_provider_class.py
tests/: test_aggregators_full_export.py  test_model_validation.py
ui/: app_state.py
utils/: data_processing.py  export.py  field_hints.py
views/: __init__.py  daily_form.py  data_explorer.py  export_builder.py  homepage.py  impella_data.py  lab_data.py  lab_form.py  sidebar.py  startpage.py  vitals_data.py
(+49 files in other folders)
