[project]
name = "redcap-mcs"
version = "0.1.0"
description = "Streamlit-Anwendung zur Analyse, Aggregation und Visualisierung medizinischer Patientendaten"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "streamlit>=1.50.0",
]
