[project]
name = "redcap-mcs"
version = "0.1.0"
description = "REDCap MCS Data Parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.28.0",
]

[tool.uv]
package = false
